--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root{
+ --primary:black;
+ --light:#efefef;
+ --dark:#fff;
+} 
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
