Revert "JSON- Separate"

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -29,20 +29,13 @@ nav {
   font-family: IBM Plex Sans;
   color: black;
   text-decoration: none;
-  padding: 0px 3px;
-  font-size: 13px;
+  padding: 7px 15px;
+  font-size: 12.5px;
 }
 .upper-nav ul {
-  /* display: flex;
-  justify-content: space-between;
-  list-style: none; */
-  list-style: none;
-  padding-left: 34px;
-}
-.oulet-container{
   display: flex;
-  padding-left: 470px;
-  margin:-3px
+  justify-content: space-between;
+  list-style: none;
 }
 .menu-dropdown {
   width: 10rem;
@@ -62,9 +55,6 @@ nav {
   line-height: 115%;
   display: grid;
 }
-.app-icon1{
-  margin: 12px -17px
-}
 .styles_text a {
   color: black;
 }
@@ -72,7 +62,7 @@ nav {
   font-family: IBM Plex Sans;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 17px;
   line-height: 100%;
   padding: 0px 31px;
   color: #000000a6;
@@ -109,7 +99,6 @@ nav {
   display: flex;
   justify-content: space-between;
   list-style: none;
-  padding: 0px 10px;
 }
 .sub-menu-1 {
   display: none;
@@ -131,7 +120,7 @@ nav {
   font-weight: 600;
   font-size: 17px;
   line-height: 100%;
-  padding: 0px 2px;
+  padding: 0px 32px;
   color: #000000a6;
   margin-top: 0px;
   line-height: 30px;
@@ -140,22 +129,18 @@ nav {
   display: block;
   position: absolute;
   border: 1.5px solid #00000026;
-  margin-top: 9px;
+  margin-top: 13px;
   margin-left: -15px;
   background-color: #efefef;
 }
 .upper-nav ul li:hover .sub-menu-2 ul {
   display: block;
-  margin-left: -35px;
+  margin-left: -50px;
   border-bottom: 0px;
-}
-.upper-nav ul li:hover .sub-menu-2 ul li a{
-  font-size: 15px;
-  font-weight:bold;
 }
 .upper-nav ul li:hover .sub-menu-2 ul li {
   width: 240px;
-  padding: 14px;
+  padding: 15px;
   text-align: left;
 }
 .menu ul li:hover .sub-menu-1 {
@@ -168,7 +153,7 @@ nav {
 }
 .menu ul li:hover .sub-menu-1 ul {
   display: block;
-  margin-left: -25px;
+  margin-left: -50px;
   border-bottom: 0px;
 }
 .menu ul li:hover .sub-menu-1 ul li {
@@ -176,9 +161,7 @@ nav {
   padding: 15px;
   text-align: left;
 }
-.outer-container{
-padding: 0px 30px;
-}
+
 /* .menu ul li ul{
     background-color: #ffbe07;
     position: absolute;
@@ -243,7 +226,7 @@ padding: 0px 30px;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   padding: 30px 0;
   background-color: #efefef;
@@ -254,12 +237,12 @@ padding: 0px 30px;
 
   text-decoration: none;
 }
-@media (max-width: 1200px) {
+@media (max-width: 980px) {
   .upper-nav {
     display: none;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 980px) {
   .hamburger {
     display: none;
   }
